--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#81C5E6" />
+    <meta name="description" content="Weather app" />
     <title>Weather</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
